--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <main>
             <div>
-                <video src="VID/BannerVídeo.mp4" loop autoplay preload="auto" muted width="640"></video><br>
+                <video src="/vid/BannerVídeo.mp4" loop autoplay preload="auto" muted width="640"></video><br>
                 <a href="https://www.youtube.com/watch?v=IicVoYoy32c">Veure'l a YouTube</a>
             </div>
             <article>
